--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>cn.com</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>dome</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>demo</name>
+	<name>dome</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
