--- a/src/main/resources/resources/AuthFilter.yml
+++ b/src/main/resources/resources/AuthFilter.yml
@@ -1,4 +1,6 @@
 data:
+  isSeparation: 0 #
+  isSeparationDESC: isSeparation 0(两者) 1(session) 2(not session)
   hashAlgorithmName: MD5
   filterChainDefinitionMap: {
     /css/**: anon,
