部分调整内容.

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -12,3 +12,23 @@ spring:
   cloud:
     config:
       enabled: off
+
+data:
+  isSeparation: 2
+  hashAlgorithmName: MD5
+  filterChainDefinitionMap: {
+    /css/**: anon,
+    /fonts/**: anon,
+    /img/**: anon,
+    /js/**: anon,
+    /html/**: anon,
+    /login/**: anon,
+    /logout: logout
+  }
+  LOGIN: login
+  INDEX: index
+  PAGE302: 302
+  PAGE404: 404
+  PAGE500: 500
+  items:
+    - /frontend
