--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.9.0</version>
+		</dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
