--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -12,6 +12,21 @@ spring:
   cloud:
     config:
       enabled: off
+  redis:
+    database: 1
+    host: 127.0.0.1
+    nodes: 127.0.0.1:6379,127.0.0.1:6380
+    port: 6379
+    maxActive: 200
+    password: 123456
+    timeout: 1000
+    jedis:
+      pool:
+        max-active: 200
+        max-wait: -1
+        max-idle: 10
+        min-idle: 0
+
 
 system:
   salt: 'chenguohai'
