--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -15,44 +15,33 @@ spring:
   redis:
     database: 1
     host: 127.0.0.1
-    nodes: 127.0.0.1:6379,127.0.0.1:6380
     port: 6379
-    maxActive: 200
     password: 123456
     timeout: 1000
     jedis:
       pool:
         max-active: 200
-        max-wait: -1
+        max-wait: 1000
         max-idle: 10
-        min-idle: 0
-
+        min-idle: 10
 
 system:
   salt: 'chenguohai'
-  expireMinute: 60 # 系统超时时长
+  expireMinute: 60 # 登录超时时长
 
 shiro:
   token:
     tokenPay: 'userName' # userName / Phone
     tokeSubject: 'TOKEN'
     tokenSalt: 'chenguohai_chenguohai_chenguohai' # bytes >= 256 or char >= 32
-    alg: '2'  # 1 , 2 , 3
+    alg: 3  # 1 , 2 , 3
     tokenExpireMinute: 1 # token 刷新
+    userOnline: true # 是否锁定用户
 
 data:
   isSeparation: 2 # Session的方式:1,无Session的方式:2 [登录状态]
   hashAlgorithmName: MD5 # 密码加码方式
-  filterChainDefinitionMap: {
-    /css/**: anon,
-    /fonts/**: anon,
-    /img/**: anon,
-    /js/**: anon,
-    /html/**: anon,
-    /login/**: anon,
-    /hello/world : anon,
-    /logout: logout
-  }
+
   LOGIN: login
   INDEX: index
   PAGE302: 302
