--- a/v3-admin-vite-main/package.json
+++ b/v3-admin-vite-main/package.json
@@ -1,15 +1,15 @@
 {
   "name": "v3-admin-vite",
   "version": "4.3.0",
-  "description": "一个免费开源的中后台管理系统基础解决方案，基于 Vue3、TypeScript、Element Plus、Pinia 和 Vite 等主流技术",
+  "description": "基于 Vue3、TypeScript、Element Plus、Pinia 和 Vite 等主流技术",
   "author": {
-    "name": "pany",
-    "email": "939630029@qq.com",
-    "url": "https://github.com/pany-ang"
+    "name": "",
+    "email": "",
+    "url": ""
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/un-pany/v3-admin-vite.git"
+    "url": ""
   },
   "type": "module",
   "scripts": {
@@ -38,11 +38,11 @@
     "path-to-regexp": "6.2.1",
     "pinia": "2.1.7",
     "screenfull": "6.0.2",
-    "vue": "3.3.13",
+    "vue": "3.4.0",
     "vue-router": "4.2.5",
-    "vxe-table": "4.4.1",
-    "vxe-table-plugin-element": "3.0.7",
-    "xe-utils": "3.5.11"
+    "vxe-table": "4.5.17",
+    "vxe-table-plugin-element": "3.1.0",
+    "xe-utils": "3.5.14"
   },
   "devDependencies": {
     "@types/js-cookie": "3.0.6",
@@ -54,17 +54,17 @@
     "@typescript-eslint/parser": "6.16.0",
     "@vitejs/plugin-vue": "5.0.0",
     "@vitejs/plugin-vue-jsx": "3.1.0",
-    "@vue/eslint-config-prettier": "8.0.0",
+    "@vue/eslint-config-prettier": "9.0.0",
     "@vue/eslint-config-typescript": "12.0.0",
     "@vue/test-utils": "2.4.3",
     "eslint": "8.56.0",
     "eslint-plugin-prettier": "5.1.2",
     "eslint-plugin-vue": "9.19.2",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "jsdom": "23.0.1",
     "lint-staged": "15.2.0",
     "prettier": "3.1.1",
-    "sass": "1.69.5",
+    "sass": "1.69.6",
     "typescript": "5.3.3",
     "unocss": "0.58.2",
     "vite": "5.0.10",
