--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -3,3 +3,5 @@ graceful-response.response-style=1
 graceful-response.origin-exception-using-detail-message=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.addMappings=false
+spring.cache.cache-names=loadBalancerCache
+spring.cache.type=caffeine
