--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <jena.version>1.0</jena.version>
         <httpmime.version>4.5.13</httpmime.version>
         <lunar.version>1.6.3</lunar.version>
+        <caffeine.version>3.1.8</caffeine.version>
     </properties>
 
     <parent>
@@ -49,6 +50,11 @@
                 <groupId>cn.6tail</groupId>
                 <artifactId>lunar</artifactId>
                 <version>${lunar.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>${caffeine.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.feiniaojin</groupId>
