--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -5,3 +5,6 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.addMappings=false
 spring.cache.cache-names=loadBalancerCache
 spring.cache.type=caffeine
+
+server.undertow.threads.io=16
+server.undertow.threads.worker=128
