--- a/gallery/src/main/resources/bootstrap-dev.yml
+++ b/gallery/src/main/resources/bootstrap-dev.yml
@@ -3,13 +3,14 @@ spring:
     nacos:
       config:
         namespace: public
-        server-addr: 127.0.0.1:8848
+        server-addr: ${spring.cloud.nacos.server-addr}
         file-extension: yml
       discovery:
         namespace: public
-        server-addr: 127.0.0.1:8848
+        server-addr: ${spring.cloud.nacos.server-addr}
       username: nacos
       password: nacos
+      server-addr: 127.0.0.1:8848
   application:
     name: gallery
 server:
