--- a/gateway/src/main/resources/bootstrap-dev.yml
+++ b/gateway/src/main/resources/bootstrap-dev.yml
@@ -12,7 +12,7 @@ spring:
       config:
         namespace: public
         server-addr: 127.0.0.1:8848
-        file-extension: yml
+        file-extension: yaml
       discovery:
         namespace: public
         server-addr: 127.0.0.1:8848
