--- a/login/src/main/resources/bootstrap-dev.yml
+++ b/login/src/main/resources/bootstrap-dev.yml
@@ -5,12 +5,32 @@ spring:
     nacos:
       config:
         namespace: public
-        server-addr: 127.0.0.1:8848
-        file-extension: yml
+        server-addr: ${spring.cloud.nacos.server-addr}
+        file-extension: yaml
+        extension-configs:
+          - data-id: core.yml
+            group: DEFAULT_GROUP
+            refresh: true
       discovery:
         namespace: public
-        server-addr: 127.0.0.1:8848
+        server-addr: ${spring.cloud.nacos.server-addr}
       username: nacos
       password: nacos
+      server-addr: 127.0.0.1:8848
   application:
     name: login
+
+#spring:
+#  data:
+#    redis:
+#      password: 123456
+#      database: 0
+#      lettuce:
+#        pool:
+#          min-idle: 0
+#          max-active: 8
+#          max-wait: -1
+#          max-idle: 8
+#          enabled: true
+#      host: 127.0.0.1
+#      port: 63790
