--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
         <logback.version>1.4.12</logback.version>
         <snakeyaml.version>2.2</snakeyaml.version>
         <redis.json.version>20231013</redis.json.version>
+        <mybatis-flex.version>1.7.6</mybatis-flex.version>
+
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <oceanbase.version>1.0.0</oceanbase.version>
     </properties>
 
     <parent>
@@ -44,6 +49,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--    mybatis-fix 替换 mybatis-plus      -->
+            <dependency>
+                <groupId>com.mybatis-flex</groupId>
+                <artifactId>mybatis-flex-dependencies</artifactId>
+                <version>${mybatis-flex.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!--    redis -> json        -->
             <dependency>
                 <groupId>org.json</groupId>
@@ -147,6 +160,28 @@
                 <configuration>
                     <parameters>true</parameters>
                     <encoding>UTF-8</encoding>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>${lombok-mapstruct-binding.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>com.mybatis-flex</groupId>
+                            <artifactId>mybatis-flex-processor</artifactId>
+                            <version>${mybatis-flex.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
