--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -9,6 +9,6 @@ spring.cache.type=caffeine
 server.undertow.threads.io=16
 server.undertow.threads.worker=128
 
-spring.cloud.nacos.config.extension-configs=-configs[0].data-id=core.yml
+spring.cloud.nacos.config.extension-configs[0].data-id=core.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
