--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <redis.json.version>20231013</redis.json.version>
         <mybatis-flex.version>1.7.6</mybatis-flex.version>
 
+        <mysql.version>8.2.0</mysql.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <oceanbase.version>1.0.0</oceanbase.version>
