--- a/core.yml
+++ b/core.yml
@@ -16,7 +16,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/cgh1?useUnicode=true&characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
     username: root
     password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
