--- a/pom.xml
+++ b/pom.xml
@@ -33,24 +33,77 @@
         <logback.version>1.4.12</logback.version>
         <snakeyaml.version>2.2</snakeyaml.version>
         <redis.json.version>20231013</redis.json.version>
+
         <mybatis-flex.version>1.7.6</mybatis-flex.version>
+        <mybatis.version>3.5.5</mybatis.version>
+        <mybatis.generator.version>3.5.5</mybatis.generator.version>
+        <mybatis.velocity.version>2.3</mybatis.velocity.version>
+        <p6spy.version>3.9.1</p6spy.version>
+        <bcpkix.version>1.76</bcpkix.version>
 
         <mysql.version>8.2.0</mysql.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <oceanbase.version>1.0.0</oceanbase.version>
+
+        <hutool.version>5.8.24</hutool.version>
+        <springfox.version>3.0.0</springfox.version>
+        <springdoc.version>1.7.0</springdoc.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.9</version>
+        <version>3.0.13</version>
         <relativePath/>
     </parent>
 
     <dependencyManagement>
         <dependencies>
+            <!--     swagger       -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>${springfox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+
             <!--    mybatis-fix 替换 mybatis-plus      -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity-engine-core</artifactId>
+                <version>${mybatis.velocity.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis.generator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>p6spy</groupId>
+                <artifactId>p6spy</artifactId>
+                <version>${p6spy.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.mybatis-flex</groupId>
                 <artifactId>mybatis-flex-dependencies</artifactId>
@@ -123,6 +176,13 @@
                 <artifactId>json-jena</artifactId>
                 <version>${jena.version}</version>
             </dependency>
+
+<!--            bug -->
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcpkix-jdk18on</artifactId>
+                <version>${bcpkix.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -147,13 +207,6 @@
                         <version>1.2.5.RELEASE</version>
                     </dependency>
                 </dependencies>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
