--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -1,13 +1,14 @@
 graceful-response.print-exception-in-global-advice=true
 graceful-response.response-style=1
 graceful-response.origin-exception-using-detail-message=true
-spring.web.resources.addMappings=false
-spring.cache.cache-names=loadBalancerCache
-spring.cache.type=caffeine
-spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/static/
-server.undertow.threads.io=16
-server.undertow.threads.worker=128
+graceful-response.response-class-full-name=cn.com.cgh.core.config.ResponseImpl
 
+## cacheManager 配置
+spring.cache.cache-names=login,user,core,gateway
+spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
+spring.cache.type=caffeine
+
+# 核心配置。
 spring.cloud.nacos.config.extension-configs[0].data-id=core.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
