--- a/core/pom.xml
+++ b/core/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+        </dependency>
+
         <!--    other api    -->
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
