--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -2,6 +2,7 @@ graceful-response.print-exception-in-global-advice=true
 graceful-response.response-style=1
 graceful-response.origin-exception-using-detail-message=true
 graceful-response.response-class-full-name=cn.com.cgh.core.config.ResponseImpl
+graceful-response.exclude-exceptions[0]=com.alibaba.csp.sentinel
 
 ## cacheManager 配置
 spring.cache.cache-names=login,user,core,gateway
