--- a/romantic/src/main/resources/bootstrap.properties
+++ b/romantic/src/main/resources/bootstrap.properties
@@ -6,3 +6,4 @@ spring.cloud.openfeign.client.config.default.logger-level=basic
 spring.cloud.openfeign.client.config.default.connect-timeout=2000
 spring.cloud.openfeign.client.config.default.read-timeout=2000
 spring.cloud.openfeign.okhttp.enabled=true
+feign.sentinel.enabled=true
