--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -1,9 +1,9 @@
 
 ## cacheManager 配置
-spring.cache.cache-names=login,user,core,gateway
-spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
-spring.cache.type=caffeine
-spring.cloud.util.enabled=true
+#spring.cache.cache-names=login,user,core,gateway
+#spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
+#spring.cache.type=caffeine
+#spring.cloud.util.enabled=true
 
 # 核心配置。
 spring.cloud.nacos.config.extension-configs[0].data-id=core.yml
