--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
     </modules>
 
     <properties>
+        <docker.maven.plugin.version>0.40.0</docker.maven.plugin.version>
+        <docker.host>http://192.168.3.101:2375</docker.host>
+
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -49,16 +52,10 @@
         <easyexcel.version>3.3.2</easyexcel.version>
         <hutool.version>5.8.24</hutool.version>
         <knife4j.version>4.4.1-SNAPSHOT</knife4j.version>
+        <spring.oauth2.version>2.2.5.RELEASE</spring.oauth2.version>
         <security.oauth2.version>2.5.2.RELEASE</security.oauth2.version>
         <nacos.version>2022.0.0.0</nacos.version>
     </properties>
-    <repositories>
-        <repository>
-            <id>nexus-maven</id>
-            <name>nexus-maven</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </repository>
-    </repositories>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -117,16 +114,20 @@
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
                 <version>${nacos.version}</version>
             </dependency>
-
             <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>easyexcel</artifactId>
-                <version>${easyexcel.version}</version>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-oauth2</artifactId>
+                <version>${spring.oauth2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security.oauth</groupId>
                 <artifactId>spring-security-oauth2</artifactId>
                 <version>${security.oauth2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
             </dependency>
             <!--     swagger       -->
             <dependency>
@@ -202,6 +203,50 @@
     </dependencyManagement>
     <build>
         <plugins>
+<!--            <plugin>-->
+<!--                <groupId>io.fabric8</groupId>-->
+<!--                <artifactId>docker-maven-plugin</artifactId>-->
+<!--                <version>${docker.maven.plugin.version}</version>-->
+<!--                <executions>-->
+<!--                    &lt;!&ndash;如果想在项目打包时构建镜像添加&ndash;&gt;-->
+<!--                    <execution>-->
+<!--                        <id>build-image</id>-->
+<!--                        <phase>package</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>build</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash; Docker 远程管理地址&ndash;&gt;-->
+<!--                    <dockerHost>${docker.host}</dockerHost>-->
+<!--                    <images>-->
+<!--                        <image>-->
+<!--                            &lt;!&ndash;定义镜像名称&ndash;&gt;-->
+<!--                            <name>mall/${project.name}:${project.version}</name>-->
+<!--                            &lt;!&ndash;定义镜像构建行为&ndash;&gt;-->
+<!--                            <build>-->
+<!--                                &lt;!&ndash;定义基础镜像&ndash;&gt;-->
+<!--                                <from>openjdk:8</from>-->
+<!--                                <args>-->
+<!--                                    <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>-->
+<!--                                </args>-->
+<!--                                &lt;!&ndash;定义哪些文件拷贝到容器中&ndash;&gt;-->
+<!--                                <assembly>-->
+<!--                                    &lt;!&ndash;定义拷贝到容器的目录&ndash;&gt;-->
+<!--                                    <targetDir>/</targetDir>-->
+<!--                                    &lt;!&ndash;只拷贝生成的jar包&ndash;&gt;-->
+<!--                                    <descriptorRef>artifact</descriptorRef>-->
+<!--                                </assembly>-->
+<!--                                &lt;!&ndash;定义容器启动命令&ndash;&gt;-->
+<!--                                <entryPoint>["java", "-jar","-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]</entryPoint>-->
+<!--                                &lt;!&ndash;定义维护者&ndash;&gt;-->
+<!--                                <maintainer>macrozheng</maintainer>-->
+<!--                            </build>-->
+<!--                        </image>-->
+<!--                    </images>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -255,5 +300,18 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+<!--        <repository>-->
+<!--            <id>aliyunmaven</id>-->
+<!--            <name>aliyun</name>-->
+<!--            <url>https://maven.aliyun.com/nexus/content/groups/public</url>-->
+<!--        </repository>-->
+        <repository>
+            <id>central2</id>
+            <name>central2</name>
+            <url>http://maven.buaa.edu.cn/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 
 </project>
